[gd_scene load_steps=5 format=3 uid="uid://bq4jl7qigbu1o"]

[ext_resource type="Script" path="res://main.gd" id="1_cnqch"]
[ext_resource type="Script" path="res://TrackPath2D.gd" id="2_cf613"]
[ext_resource type="Script" path="res://Cars.gd" id="3_2v6q5"]

[sub_resource type="SystemFont" id="SystemFont_1n1a0"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_cnqch")

[node name="TrackContainer" type="Node2D" parent="."]

[node name="Track" type="Node2D" parent="TrackContainer"]
script = ExtResource("2_cf613")

[node name="Cars" type="Node2D" parent="TrackContainer"]
script = ExtResource("3_2v6q5")
font = SubResource("SystemFont_1n1a0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1280.0
offset_top = 5.0
offset_right = 1320.0
offset_bottom = 45.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 210.0
offset_bottom = 95.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(210, 125)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
columns = 2

[node name="LabelIP" type="Label" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "IP:"

[node name="TextEditIP" type="TextEdit" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
text = "127.0.0.1"

[node name="LabelPort" type="Label" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Port:"

[node name="TextEditPort" type="TextEdit" parent="Control/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 36)
layout_mode = 2
text = "9000"

[node name="ConnectButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="MarginContainer2" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_top = 135.0
offset_right = 220.0
offset_bottom = 270.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="Control/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LabelSpeed" type="Label" parent="Control/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "0 km/h"
horizontal_alignment = 1

[node name="LabelGear" type="Label" parent="Control/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "N"
horizontal_alignment = 1

[node name="LabelFuel" type="Label" parent="Control/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "0 kg"
horizontal_alignment = 1

[node name="ProgressBarThrottle" type="ProgressBar" parent="Control/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0

[node name="ProgressBarBreak" type="ProgressBar" parent="Control/MarginContainer2/VBoxContainer"]
layout_mode = 2
max_value = 1.0

[node name="ProgressBarClutch" type="ProgressBar" parent="Control/MarginContainer2/VBoxContainer"]
layout_mode = 2
max_value = 1.0

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
